# hc-zome-lib

./: .gitignore  Cargo.toml  Makefile  README.md  config.nix  default.nix  dna.yaml  flake.nix  happ.yaml  holochain_version.nix  version-manager.json
.github/: CODEOWNERS
.github/workflows/: main.yml
crates/joining_code/: Cargo.toml
crates/joining_code/src/: joining_code.rs  lib.rs  props.rs  validation.rs
crates/membrane_manager_utils/: Cargo.toml
crates/membrane_manager_utils/src/: props.rs  validation.rs
hc-zomes.dna.workdir/: dna.json
nix/: sources.json
tests/: common_config.ts  installAgents.ts  package-lock.json  package.json  tsconfig.json  types.ts  util.js
tests/common/: const.ts  tryo-helper.ts
tests/unit-test/: index.ts  mem-proof.ts  profile.ts  profile_not_editable.ts
zomes/hc_cz_profile/: Cargo.toml
zomes/hc_cz_profile/src/: error.rs  handler.rs  lib.rs
zomes/hc_iz_membrane_manager/: Cargo.toml
zomes/hc_iz_membrane_manager/src/: lib.rs  props.rs  validation.rs
zomes/hc_iz_profile/: Cargo.toml
zomes/hc_iz_profile/src/: entries.rs  lib.rs  validation.rs
zomes/membrane_manager_lib/: Cargo.toml
zomes/membrane_manager_lib/src/: lib.rs
zomes/profile/: Cargo.toml
zomes/profile/src/: entries.rs  error.rs  handler.rs  lib.rs  validation.rs
zomes/profiles/: Cargo.toml
zomes/profiles/src/: error.rs  lib.rs
