[workspace]
resolver = "2"

members = [
  "zomes/hc_cz_profile",
  "zomes/hc_iz_profile",
  "zomes/hc_iz_membrane_manager"
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace.dependencies]
hdi = "=0.5.0-dev.12"
hdk = "=0.4.0-dev.14"
holochain_zome_types = "0.4.0-dev.11"
hc_utils = "=0.4.0-dev.14"
serde = "1.0"
