[package]
name = "hc_joining_code"
version = "0.2.0"
authors = [ "zo-el<joelulahanna@gmail.com>" ]
edition = "2021"

[lib]
name = "hc_joining_code"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = "=0.0.131"
serde = "1.0"
derive_more = "0.99"
holo_hash = { version = "=0.0.21", features = ["encoding"] }
