[package]
name = "membrane_manager_utils"
version = "0.2.0"
authors = [ "zo-el<joelulahanna@gmail.com>" ]
edition = "2021"

[lib]
name = "membrane_manager_utils"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "=1.0.139"
derive_more = "=0.99.17"
holochain_deterministic_integrity = "=0.0.10"
