[package]
name = "hc_cz_profile"
version = "0.1.0-beta-rc.3"
authors = ["zo-el <joelulahanna@gmail>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_cz_profile"

[dependencies]
serde = "1.0"
thiserror = "1.0"
hdk = "=0.1.0-beta-rc.3"
hc_iz_profile = { path = "../hc_iz_profile" }
hc_utils = "=0.1.0-beta-rc.3"
