[package]
name = "hc_cz_profile"
version = "0.2.0"
description = "A Holochain Coordinator-Zome that stores profile information"
homepage = "https://github.com/holochain/hc-zome-lib/tree/develop/zomes/hc_cz_profile"
documentation = "https://docs.rs/hc_cz_profile"
license = "CAL-1.0"
authors = ["zo-el <joel.ulahanna@holo.host>"]
keywords = [ "holochain", "holo", "hdk", "hdk-helpers", "holochain-dna"]
categories = [ "cryptography" ]
readme = "../../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_cz_profile"

[dependencies]
serde = "1.0"
thiserror = "1.0"
hdk = "=0.2.0"
hc_iz_profile = { version = "0.2.0", path = "../hc_iz_profile" }
hc_utils = "=0.2.0"
