[package]
name = "hc_iz_membrane_manager"
version = "0.1.0-beta-rc.3"
authors = ["zo-el <joelulahanna@gmail.com>"]
edition = "2021"

[lib]
name = "hc_iz_membrane_manager"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1.0"
hdi = "=0.2.0-beta-rc.3"
membrane_manager_utils = {path = "../../crates/membrane_manager_utils"}
