[package]
name = "hc_iz_membrane_manager"
version = "0.3.0-beta-dev.35-hotfix.1"
description = "A Holochain Integrity-Zome that helps validates the membrane proof passed into a DNA"
homepage = "https://github.com/holochain/hc-zome-lib/tree/develop/zomes/hc_iz_membrane_manager"
documentation = "https://docs.rs/hc_iz_membrane_manager"
license = "CAL-1.0"
authors = ["zo-el <joel.ulahanna@holo.host>"]
keywords = [ "holochain", "holo", "hdk", "hdk-helpers", "holochain-dna"]
categories = [ "cryptography" ]
readme = "../../README.md"
edition = "2021"

[lib]
name = "hc_iz_membrane_manager"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1.0"
hdi = "=0.4.0-beta-dev.31"
