[package]
name = "hc_iz_profile"
version = "0.4.0-dev.11"
description = "A Holochain Integrity-Zome that stores profile information"
homepage = "https://github.com/holochain/hc-zome-lib/tree/develop/zomes/hc_iz_profile"
documentation = "https://docs.rs/hc_iz_profile"
license = "CAL-1.0"
authors = ["zo-el <joel.ulahanna@holo.host>"]
keywords = [ "holochain", "holo", "hdk", "hdk-helpers", "holochain-dna"]
categories = [ "cryptography" ]
readme = "../../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_iz_profile"

[dependencies]
serde =  { workspace = true }
hdi =  { workspace = true }
