[package]
name = "profile"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmail>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profile"

[dependencies]
serde = "=1.0.123"
thiserror = "1.0.22"
hdk = "=0.0.121"
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "0.0.121", package = "hc_utils"}
