[package]
name = "profile"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmail>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profile"

[dependencies]
serde = "1.0"
thiserror = "1.0"
hdk = "=0.0.138"
# hc_utils = "=0.0.138"
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "v0.0.138", package = "hc_utils"}
